--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
         uses: actions/setup-node@v1
         with: 
           node-version: 16.x
-          
+      - run: npm install    
       - run: npm run build
       - name: get-npm-version
         id: package-version
