--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "htp1-custom-ui-background-service-console",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "htp1-custom-ui-background-service.js",
   "scripts": {
     "start": "node htp1-custom-ui-background-service.js",
-    "build": "pkg --targets \"node16-linux-x64,node16-macos-x64,node16-win-x64,node16-linux-arm64\" --no-bytecode --public-packages \"*\" --public htp1-custom-ui-background-service.js"
+    "build": "pkg --targets \"node16-linux-x64,node16-macos-x64,node16-win-x64,node16-linux-arm64,node16-linux-arm7\" --no-bytecode --public-packages \"*\" --public htp1-custom-ui-background-service.js"
   },
   "repository": {
     "type": "git",
