--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "htp1-custom-ui-background-service.js",
   "scripts": {
     "start": "node htp1-custom-ui-background-service.js",
-    "build": "pkg --targets \"node16-linux-x64,node16-macos-x64,node16-win-x64,node16-linux-arm64,node16-linux-armv7\" --no-bytecode --public-packages \"*\" --public htp1-custom-ui-background-service.js"
+    "build": "pkg --targets \"node16-linux-x64,node16-macos-x64,node16-win-x64,node16-linux-arm64,node16-linuxstatic-armv7\" --no-bytecode --public-packages \"*\" --public htp1-custom-ui-background-service.js"
   },
   "repository": {
     "type": "git",
